# robot_meshes_convertor

./: CMakeLists.txt  package.xml  setup.py
nodes/: stl_to_obj
src/py_model_tools/: converter_stl_to_obj.py  stl_to_obj_blender.py
