<?xml version="1.0"?>
<package>
  <name>model_tools</name>
  <version>1.0.0</version>
  <description>model_tools</description>
  <author email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- We need the xacro package to build the urdf model -->
  <build_depend> xacro </build_depend>
  <run_depend>   xacro </run_depend>

  <export>
  </export>
</package>
